# grouper

./: CMakeLists.txt  package.xml  setup.py
src/grouper/: __init__.py  aligner.py  buffer.py  combine.py  combiner.py  grouper.py
